templates/default/app.css
/* $Id$ */
/* Header classes*/
#tracker-index_tracker-index-left_multiqueue {
	/* This prevents the multi-select from pushing down the add button */
	max-width: 95%;
}
/* Assigned context dialog */
.action_popup-content.assigned_popup {
	min-height: 150px !important;
	overflow-y: hidden;
}
#tracker-edit.et2_container
{
}
.tracker_overdue,.bold { font-weight: bold; }
.tracker_unseen { font-weight: bold; }
.tracker_seen { font-weight: normal; }
.tracker_leftPad5 { padding-left: 5px; }
label.tracker_trIdEdit:before { content: "#"; }
.headertext { color: black; font-size: 120%; }
.lpadding5 { padding-left: 5px; }
.tracker_assign { width:100% !important;}
.redItalic { color: red; font-style: italic; }
.low,.low_done,.normal,.normal_done,.high,.high_done,.urgent,.urgent_done { font-weight: bold; }
.low,.low_done { color:#606060; }
.normal,.normal_done { color:black }
.high { color:#cc0000; }
.high_done { color:#800000; }
.urgent { color:#ff00ff; }
.urgent_done { color:#800080; }
.tracker_overdue { color:#cc0000; font-weight:bold; }
.private { font-style:italic; }
.planned { font-style:italic; }
.fixedHeight { line-height: 12px; }
.tracker_indexPrio:first-letter { font-weight: bold; }
.tracker_image16 img { height: 16px; }

/* Restricted access replies */
.reply_visible_1 {
	border: 1px dashed gray;
	background:  beige;
	width: 100%;
	display: inline-block;
	overflow: hidden;
}
.reply_visible_0 {
	overflow: hidden;
}
#tracker-edit_tr_creator {
	white-space: nowrap;
	text-overflow: ellipsis;
	width: 50%;
	overflow: hidden;
}
.trackerDes {
}
/* Add border to ACL's table for more reading convenient*/
#tracker-admin_tracker-admin-acl tr.row {
	border-bottom: 1px solid silver;
}
/* Nicer sizine for escalation selectboxes */
.tracker_escalation_action select {
    width: 150px;
}
#tracker-edit_tr_assigned + .chzn-container .chzn-results {
	max-height: 215px;
}
/* Limit image sizes */
#tracker-edit_tracker-edit-comments img {
    max-width: 100%;
    max-height: 100%;
    height: auto;
    width: auto;
}
/* Add comment file buttons */
#tracker-edit_tracker-edit-add_comment .et2_link_to.et2_toolbar * {
    vertical-align: top
}
#tracker-edit_tracker-edit-add_comment .et2_hbox .et2_label[for="canned_response"] {
	padding-top: 6px;
}
/* Turn off edit cursor, use context menu instead */
#tracker-edit_tracker-edit-comments .et2_editable {
	cursor: default;
}
/* Files linked to comments */
#tracker-edit_tracker-edit-comments .et2_link_to.et2_toolbar * {
    vertical-align: top;
}
#tracker-edit_tracker-edit-comments .et2_link_to.et2_toolbar div.et2_file  {
	width: 95%;
}
#tracker-edit_tracker-edit-comments .et2_file.et2_vfs tr:first-child {
	border-collapse:separate;
	border-spacing: 30px;
}
#tracker-edit_tracker-edit-comments .et2_file.et2_vfs tbody,
#tracker-edit_tracker-edit-comments .et2_file.et2_vfs td {
	border: none;
}
#tracker-edit_tracker-edit-add_comment .et2_file.et2_vfs table {
	width: 300px;
}
#tracker-edit_tracker-edit-add_comment .et2_hbox .et2_checkbox_label {
	margin-top: 10px;
}

#tracker-edit_tracker-edit-comments .et2_vfs td.icon,
#tracker-edit_tracker-edit-comments .et2_vfs .progress {
    display: none
}

#tracker-edit_tracker-edit-comments .et2_toolbar.hide_buttons et2-button {
    display: none !important;
}

#tracker-edit_tracker-edit-comments et2-button .et2_vfs_btn {
    float: left;
}

#tracker-index_tracker-index-queue {
    position: relative;
    flex: 2 1 auto;
    width: 400px;
}

#tracker-index_tracker-index-queue > * {
    flex: 1 1 auto;
    max-width: initial;
}

#tracker-admin .jPicker {
    vertical-align: middle
}

.et2_editable, .et2_editable_readonly {
    width: 100%;
}

